[gd_scene load_steps=2 format=3 uid="uid://d1p4tjkqnbk8l"]

[ext_resource type="Script" uid="uid://dsbwkvaee46vx" path="res://EndScene.gd" id="1_endscene"]

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_endscene")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -581.0
offset_top = -441.0
offset_right = -181.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.925, 2.925)
expand_mode = 1
stretch_mode = 6

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Final Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to Main Menu"
